welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:6: error: not found: value min
  return min(adix,azero,bdix,bzero)
         ^