welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  var adix=Math.abs(a-10)
  var bdix=Math.abs(b-10)
  var azero=Math.abs(a)
  var bzero=Math.abs(b)
  return min(adix,azero,bdix,bzero)
}